src/scparse.output
Terminals unused in grammar

    OTHER
    NEWLINE


Grammar

    0 $accept: input $end

    1 input: datum

    2 datum: simpledatum
    3      | compounddatum

    4 simpledatum: boolean
    5            | number
    6            | character
    7            | string
    8            | symbol
    9            | END_OF_FILE

   10 boolean: TOKEN_TRUE
   11        | TOKEN_FALSE

   12 number: NUMBER

   13 character: CHARACTER

   14 string: STRING

   15 symbol: IDENTIFIER

   16 compounddatum: list
   17              | vector

   18 list: OPENPAR datumzero CLOSEPAR
   19     | OPENPAR datumone DOT datum CLOSEPAR
   20     | abbreviation

   21 vector: BEGINVECTOR datumzero CLOSEPAR

   22 datumzero: datumzero datum
   23          | ε

   24 datumone: datumzero datum

   25 abbreviation: abbrevprefix datum

   26 abbrevprefix: QUOTE
   27             | QUASIQUOTE
   28             | UNQUOTE
   29             | UNQUOTESPLICING


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    OTHER <str> (258)
    IDENTIFIER <str> (259) 15
    NUMBER <num> (260) 12
    CHARACTER <chr> (261) 13
    STRING <str> (262) 14
    BEGINVECTOR <str> (263) 21
    OPENPAR <str> (264) 18 19
    CLOSEPAR <str> (265) 18 19 21
    DOT <str> (266) 19
    QUOTE <str> (267) 26
    QUASIQUOTE <str> (268) 27
    UNQUOTE <str> (269) 28
    UNQUOTESPLICING <str> (270) 29
    TOKEN_TRUE <str> (271) 10
    TOKEN_FALSE <str> (272) 11
    NEWLINE <str> (273)
    END_OF_FILE <str> (274) 9


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    input (21)
        on left: 1
        on right: 0
    datum (22)
        on left: 2 3
        on right: 1 19 22 24 25
    simpledatum (23)
        on left: 4 5 6 7 8 9
        on right: 2
    boolean (24)
        on left: 10 11
        on right: 4
    number (25)
        on left: 12
        on right: 5
    character (26)
        on left: 13
        on right: 6
    string (27)
        on left: 14
        on right: 7
    symbol (28)
        on left: 15
        on right: 8
    compounddatum (29)
        on left: 16 17
        on right: 3
    list (30)
        on left: 18 19 20
        on right: 16
    vector (31)
        on left: 21
        on right: 17
    datumzero (32)
        on left: 22 23
        on right: 18 21 22 24
    datumone (33)
        on left: 24
        on right: 19
    abbreviation (34)
        on left: 25
        on right: 20
    abbrevprefix (35)
        on left: 26 27 28 29
        on right: 25


State 0

    0 $accept: • input $end

    IDENTIFIER       shift, and go to state 1
    NUMBER           shift, and go to state 2
    CHARACTER        shift, and go to state 3
    STRING           shift, and go to state 4
    BEGINVECTOR      shift, and go to state 5
    OPENPAR          shift, and go to state 6
    QUOTE            shift, and go to state 7
    QUASIQUOTE       shift, and go to state 8
    UNQUOTE          shift, and go to state 9
    UNQUOTESPLICING  shift, and go to state 10
    TOKEN_TRUE       shift, and go to state 11
    TOKEN_FALSE      shift, and go to state 12
    END_OF_FILE      shift, and go to state 13

    input          go to state 14
    datum          go to state 15
    simpledatum    go to state 16
    boolean        go to state 17
    number         go to state 18
    character      go to state 19
    string         go to state 20
    symbol         go to state 21
    compounddatum  go to state 22
    list           go to state 23
    vector         go to state 24
    abbreviation   go to state 25
    abbrevprefix   go to state 26


State 1

   15 symbol: IDENTIFIER •

    $default  reduce using rule 15 (symbol)


State 2

   12 number: NUMBER •

    $default  reduce using rule 12 (number)


State 3

   13 character: CHARACTER •

    $default  reduce using rule 13 (character)


State 4

   14 string: STRING •

    $default  reduce using rule 14 (string)


State 5

   21 vector: BEGINVECTOR • datumzero CLOSEPAR

    $default  reduce using rule 23 (datumzero)

    datumzero  go to state 27


State 6

   18 list: OPENPAR • datumzero CLOSEPAR
   19     | OPENPAR • datumone DOT datum CLOSEPAR

    $default  reduce using rule 23 (datumzero)

    datumzero  go to state 28
    datumone   go to state 29


State 7

   26 abbrevprefix: QUOTE •

    $default  reduce using rule 26 (abbrevprefix)


State 8

   27 abbrevprefix: QUASIQUOTE •

    $default  reduce using rule 27 (abbrevprefix)


State 9

   28 abbrevprefix: UNQUOTE •

    $default  reduce using rule 28 (abbrevprefix)


State 10

   29 abbrevprefix: UNQUOTESPLICING •

    $default  reduce using rule 29 (abbrevprefix)


State 11

   10 boolean: TOKEN_TRUE •

    $default  reduce using rule 10 (boolean)


State 12

   11 boolean: TOKEN_FALSE •

    $default  reduce using rule 11 (boolean)


State 13

    9 simpledatum: END_OF_FILE •

    $default  reduce using rule 9 (simpledatum)


State 14

    0 $accept: input • $end

    $end  shift, and go to state 30


State 15

    1 input: datum •

    $default  reduce using rule 1 (input)


State 16

    2 datum: simpledatum •

    $default  reduce using rule 2 (datum)


State 17

    4 simpledatum: boolean •

    $default  reduce using rule 4 (simpledatum)


State 18

    5 simpledatum: number •

    $default  reduce using rule 5 (simpledatum)


State 19

    6 simpledatum: character •

    $default  reduce using rule 6 (simpledatum)


State 20

    7 simpledatum: string •

    $default  reduce using rule 7 (simpledatum)


State 21

    8 simpledatum: symbol •

    $default  reduce using rule 8 (simpledatum)


State 22

    3 datum: compounddatum •

    $default  reduce using rule 3 (datum)


State 23

   16 compounddatum: list •

    $default  reduce using rule 16 (compounddatum)


State 24

   17 compounddatum: vector •

    $default  reduce using rule 17 (compounddatum)


State 25

   20 list: abbreviation •

    $default  reduce using rule 20 (list)


State 26

   25 abbreviation: abbrevprefix • datum

    IDENTIFIER       shift, and go to state 1
    NUMBER           shift, and go to state 2
    CHARACTER        shift, and go to state 3
    STRING           shift, and go to state 4
    BEGINVECTOR      shift, and go to state 5
    OPENPAR          shift, and go to state 6
    QUOTE            shift, and go to state 7
    QUASIQUOTE       shift, and go to state 8
    UNQUOTE          shift, and go to state 9
    UNQUOTESPLICING  shift, and go to state 10
    TOKEN_TRUE       shift, and go to state 11
    TOKEN_FALSE      shift, and go to state 12
    END_OF_FILE      shift, and go to state 13

    datum          go to state 31
    simpledatum    go to state 16
    boolean        go to state 17
    number         go to state 18
    character      go to state 19
    string         go to state 20
    symbol         go to state 21
    compounddatum  go to state 22
    list           go to state 23
    vector         go to state 24
    abbreviation   go to state 25
    abbrevprefix   go to state 26


State 27

   21 vector: BEGINVECTOR datumzero • CLOSEPAR
   22 datumzero: datumzero • datum

    IDENTIFIER       shift, and go to state 1
    NUMBER           shift, and go to state 2
    CHARACTER        shift, and go to state 3
    STRING           shift, and go to state 4
    BEGINVECTOR      shift, and go to state 5
    OPENPAR          shift, and go to state 6
    CLOSEPAR         shift, and go to state 32
    QUOTE            shift, and go to state 7
    QUASIQUOTE       shift, and go to state 8
    UNQUOTE          shift, and go to state 9
    UNQUOTESPLICING  shift, and go to state 10
    TOKEN_TRUE       shift, and go to state 11
    TOKEN_FALSE      shift, and go to state 12
    END_OF_FILE      shift, and go to state 13

    datum          go to state 33
    simpledatum    go to state 16
    boolean        go to state 17
    number         go to state 18
    character      go to state 19
    string         go to state 20
    symbol         go to state 21
    compounddatum  go to state 22
    list           go to state 23
    vector         go to state 24
    abbreviation   go to state 25
    abbrevprefix   go to state 26


State 28

   18 list: OPENPAR datumzero • CLOSEPAR
   22 datumzero: datumzero • datum
   24 datumone: datumzero • datum

    IDENTIFIER       shift, and go to state 1
    NUMBER           shift, and go to state 2
    CHARACTER        shift, and go to state 3
    STRING           shift, and go to state 4
    BEGINVECTOR      shift, and go to state 5
    OPENPAR          shift, and go to state 6
    CLOSEPAR         shift, and go to state 34
    QUOTE            shift, and go to state 7
    QUASIQUOTE       shift, and go to state 8
    UNQUOTE          shift, and go to state 9
    UNQUOTESPLICING  shift, and go to state 10
    TOKEN_TRUE       shift, and go to state 11
    TOKEN_FALSE      shift, and go to state 12
    END_OF_FILE      shift, and go to state 13

    datum          go to state 35
    simpledatum    go to state 16
    boolean        go to state 17
    number         go to state 18
    character      go to state 19
    string         go to state 20
    symbol         go to state 21
    compounddatum  go to state 22
    list           go to state 23
    vector         go to state 24
    abbreviation   go to state 25
    abbrevprefix   go to state 26


State 29

   19 list: OPENPAR datumone • DOT datum CLOSEPAR

    DOT  shift, and go to state 36


State 30

    0 $accept: input $end •

    $default  accept


State 31

   25 abbreviation: abbrevprefix datum •

    $default  reduce using rule 25 (abbreviation)


State 32

   21 vector: BEGINVECTOR datumzero CLOSEPAR •

    $default  reduce using rule 21 (vector)


State 33

   22 datumzero: datumzero datum •

    $default  reduce using rule 22 (datumzero)


State 34

   18 list: OPENPAR datumzero CLOSEPAR •

    $default  reduce using rule 18 (list)


State 35

   22 datumzero: datumzero datum •
   24 datumone: datumzero datum •

    DOT       reduce using rule 24 (datumone)
    $default  reduce using rule 22 (datumzero)


State 36

   19 list: OPENPAR datumone DOT • datum CLOSEPAR

    IDENTIFIER       shift, and go to state 1
    NUMBER           shift, and go to state 2
    CHARACTER        shift, and go to state 3
    STRING           shift, and go to state 4
    BEGINVECTOR      shift, and go to state 5
    OPENPAR          shift, and go to state 6
    QUOTE            shift, and go to state 7
    QUASIQUOTE       shift, and go to state 8
    UNQUOTE          shift, and go to state 9
    UNQUOTESPLICING  shift, and go to state 10
    TOKEN_TRUE       shift, and go to state 11
    TOKEN_FALSE      shift, and go to state 12
    END_OF_FILE      shift, and go to state 13

    datum          go to state 37
    simpledatum    go to state 16
    boolean        go to state 17
    number         go to state 18
    character      go to state 19
    string         go to state 20
    symbol         go to state 21
    compounddatum  go to state 22
    list           go to state 23
    vector         go to state 24
    abbreviation   go to state 25
    abbrevprefix   go to state 26


State 37

   19 list: OPENPAR datumone DOT datum • CLOSEPAR

    CLOSEPAR  shift, and go to state 38


State 38

   19 list: OPENPAR datumone DOT datum CLOSEPAR •

    $default  reduce using rule 19 (list)
